[gd_scene load_steps=3 format=3 uid="uid://cim7jddjs12ja"]

[ext_resource type="Script" path="res://gameOverScreen.gd" id="1_pewr7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bibef"]
bg_color = Color(0.501961, 0.737255, 0.980392, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[node name="gameOverScreen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 144.0
offset_top = 128.0
offset_right = -152.0
offset_bottom = 272.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pewr7")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 864.0
offset_bottom = 808.0
theme_override_styles/panel = SubResource("StyleBoxFlat_bibef")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_right = 864.0
offset_bottom = 96.0
theme_override_font_sizes/font_size = 85
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="personalBest" type="Label" parent="Panel"]
layout_mode = 0
offset_top = 144.0
offset_right = 864.0
offset_bottom = 263.0
theme_override_font_sizes/font_size = 60
text = "Personal best : 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="score" type="Label" parent="Panel"]
layout_mode = 0
offset_top = 232.0
offset_right = 864.0
offset_bottom = 351.0
theme_override_font_sizes/font_size = 60
text = "Time : 999"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 280.0
offset_top = 352.0
offset_right = 576.0
offset_bottom = 464.0
theme_override_font_sizes/font_size = 50
text = "Quit"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 280.0
offset_top = 480.0
offset_right = 576.0
offset_bottom = 592.0
theme_override_font_sizes/font_size = 50
text = "MainMenu"

[node name="Button4" type="Button" parent="."]
layout_mode = 0
offset_left = 280.0
offset_top = 608.0
offset_right = 576.0
offset_bottom = 720.0
theme_override_font_sizes/font_size = 50
text = "restart"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
